<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculadora</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="num9">9</string>
    <string name="num8">8</string>
    <string name="txtce">CE</string>
    <string name="num7">7</string>
    <string name="num6">6</string>
    <string name="num5">5</string>
    <string name="num4">4</string>
    <string name="num3">3</string>
    <string name="num2">2</string>
    <string name="num1">1</string>
    <string name="num0">0</string>
    <string name="btnigual">=</string>
    <string name="entre">/</string>
    <string name="btnentre">/</string>
    <string name="btnpor">X</string>
    <string name="signomas">+</string>
    <string name="signomenos">-</string>
    <string name="resultadooperacion">0</string>

</resources>
