<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Calculadora" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/textview0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultadooperacion"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn7"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num7"
                    android:textColor="@style/Blanco" />

                <Button
                    android:id="@+id/btn8"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num8" />

                <Button
                    android:id="@+id/btn9"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num9" />

                <Button
                    android:id="@+id/division"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnentre" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn4"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num4" />

                <Button
                    android:id="@+id/btn5"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num5" />

                <Button
                    android:id="@+id/btn6"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num6" />

                <Button
                    android:id="@+id/multiplicacion"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnpor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn1"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num1" />

                <Button
                    android:id="@+id/btn2"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num2" />

                <Button
                    android:id="@+id/btn3"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num3" />

                <Button
                    android:id="@+id/suma"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signomas" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn0"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num0" />

                <Button
                    android:id="@+id/igual"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnigual" />

                <Button
                    android:id="@+id/btnce"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtce" />

                <Button
                    android:id="@+id/resta"
                    style="@style/RedBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signomenos" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>